file location change

--- a/Jenkins/File_Injection/Jenkinsfile
+++ b/Jenkins/File_Injection/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
     environment {
         KUBECONFIG = "/home/ubuntu/.kube/config"
         NAMESPACE = "devops"
-        LABEL = "python-app"
+        LABEL = "app=rickandmorty"
     }
 
     stages {
