--- a/Helm/templates/deployment.yaml
+++ b/Helm/templates/deployment.yaml
@@ -18,10 +18,12 @@ spec:
         - name: regcred
       containers:
         - name: {{ include "rickandmorty.name" . }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default "latest" }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.service.targetPort }}
+          resources:
+{{ toYaml .Values.resources | indent 12 }}
           livenessProbe:
             httpGet:
               path: /health
