--- a/Helm/values.yaml
+++ b/Helm/values.yaml
@@ -2,10 +2,17 @@ replicaCount: 3
 
 image:
   repository: danielashkenazy1/cicd_k8s_python_app
-  tag: ""
+  tag: "latest"
   pullPolicy: Always
 
 service:
   type: ClusterIP
   port: 80
   targetPort: 80
+resources:
+  requests:
+    cpu: 100m
+    memory: 128Mi
+  limits:
+    cpu: 500m
+    memory: 256Mi
